[package]
edition = "2021"
name    = "abc001"
version = "0.1.0"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc001-a", problem = "https://atcoder.jp/contests/abc001/<FIXME: screen name of the problem>" }
b = { name = "abc001-b", problem = "https://atcoder.jp/contests/abc001/<FIXME: screen name of the problem>" }
c = { name = "abc001-c", problem = "https://atcoder.jp/contests/abc001/<FIXME: screen name of the problem>" }
d = { name = "abc001-d", problem = "https://atcoder.jp/contests/abc001/<FIXME: screen name of the problem>" }

# dependencies added to new project
[dependencies]
ac-library-rs = "0.1.1"
itertools     = "=0.11.0"
proconio      = "=0.4.5"

[profile.release]
lto   = true
panic = 'abort'

[[bin]]
name = "abc001-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc001-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc001-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc001-d"
path = "./src/bin/d.rs"
