[package]
name = "abc003"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc003-a", problem = "https://atcoder.jp/contests/abc003/<FIXME: screen name of the problem>"}
b = { name = "abc003-b", problem = "https://atcoder.jp/contests/abc003/<FIXME: screen name of the problem>"}
c = { name = "abc003-c", problem = "https://atcoder.jp/contests/abc003/<FIXME: screen name of the problem>"}
d = { name = "abc003-d", problem = "https://atcoder.jp/contests/abc003/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
ac-library-rs="0.1.1"
proconio="=0.4.5"
itertools="=0.11.0"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc003-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc003-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc003-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc003-d"
path = "./src/bin/d.rs"
