[package]
edition = "2018"
name    = "abc021"
version = "0.1.0"

[package.metadata.cargo-compete.bin]
abc021-a = { alias = "a", problem = "https://atcoder.jp/contests/abc021/tasks/abc021_a" }
abc021-b = { alias = "b", problem = "https://atcoder.jp/contests/abc021/tasks/abc021_b" }
abc021-c = { alias = "c", problem = "https://atcoder.jp/contests/abc021/tasks/abc021_c" }
abc021-d = { alias = "d", problem = "https://atcoder.jp/contests/abc021/tasks/abc021_d" }

[[bin]]
name = "abc021-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc021-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc021-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc021-d"
path = "src/bin/d.rs"

[dependencies]
ac-library-rs = "0.1.1"
itertools     = "=0.11.0"
proconio      = "=0.4.5"

[dev-dependencies]
