[package]
name = "abc029"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc029-a", problem = "https://atcoder.jp/contests/abc029/<FIXME: screen name of the problem>"}
b = { name = "abc029-b", problem = "https://atcoder.jp/contests/abc029/<FIXME: screen name of the problem>"}
c = { name = "abc029-c", problem = "https://atcoder.jp/contests/abc029/<FIXME: screen name of the problem>"}
d = { name = "abc029-d", problem = "https://atcoder.jp/contests/abc029/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc029-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc029-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc029-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc029-d"
path = "./src/bin/d.rs"
