[package]
name = "abc033"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc033-a", problem = "https://atcoder.jp/contests/abc033/<FIXME: screen name of the problem>"}
b = { name = "abc033-b", problem = "https://atcoder.jp/contests/abc033/<FIXME: screen name of the problem>"}
c = { name = "abc033-c", problem = "https://atcoder.jp/contests/abc033/<FIXME: screen name of the problem>"}
d = { name = "abc033-d", problem = "https://atcoder.jp/contests/abc033/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc033-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc033-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc033-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc033-d"
path = "./src/bin/d.rs"
