[package]
name = "abc080"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc080-a", problem = "https://atcoder.jp/contests/abc080/<FIXME: screen name of the problem>"}
b = { name = "abc080-b", problem = "https://atcoder.jp/contests/abc080/<FIXME: screen name of the problem>"}
c = { name = "abc080-c", problem = "https://atcoder.jp/contests/abc080/<FIXME: screen name of the problem>"}
d = { name = "abc080-d", problem = "https://atcoder.jp/contests/abc080/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
proconio = "*"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc080-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc080-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc080-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc080-d"
path = "./src/bin/d.rs"
