[package]
name = "abc102"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc102-a", problem = "https://atcoder.jp/contests/abc102/<FIXME: screen name of the problem>"}
b = { name = "abc102-b", problem = "https://atcoder.jp/contests/abc102/<FIXME: screen name of the problem>"}
c = { name = "abc102-c", problem = "https://atcoder.jp/contests/abc102/<FIXME: screen name of the problem>"}
d = { name = "abc102-d", problem = "https://atcoder.jp/contests/abc102/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]
ac-library-rs="0.1.1"
proconio="=0.4.5"
itertools="=0.11.0"

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc102-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc102-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc102-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc102-d"
path = "./src/bin/d.rs"
