[package]
edition = "2018"
name    = "abc105"
version = "0.1.0"

[package.metadata.cargo-compete.bin]
abc105-a = { alias = "a", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_a" }
abc105-b = { alias = "b", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_b" }
abc105-c = { alias = "c", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_c" }
abc105-d = { alias = "d", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_d" }

[[bin]]
name = "abc105-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc105-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc105-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc105-d"
path = "src/bin/d.rs"

[dependencies]
ac-library-rs = "0.1.1"
itertools     = "=0.11.0"
proconio      = "=0.4.5"

[dev-dependencies]
