[package]
name = "abc126"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc126-a = { alias = "a", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_a" }
abc126-b = { alias = "b", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_b" }
abc126-c = { alias = "c", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_c" }
abc126-d = { alias = "d", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_d" }
abc126-e = { alias = "e", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_e" }
abc126-f = { alias = "f", problem = "https://atcoder.jp/contests/abc126/tasks/abc126_f" }

[[bin]]
name = "abc126-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc126-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc126-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc126-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc126-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc126-f"
path = "src/bin/f.rs"

[dependencies]
ac-library-rs="0.1.1"
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
