[package]
name = "abc127"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc127-a = { alias = "a", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_a" }
abc127-b = { alias = "b", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_b" }
abc127-c = { alias = "c", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_c" }
abc127-d = { alias = "d", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_d" }
abc127-e = { alias = "e", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_e" }
abc127-f = { alias = "f", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_f" }

[[bin]]
name = "abc127-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc127-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc127-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc127-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc127-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc127-f"
path = "src/bin/f.rs"

[dependencies]
ac-library-rs="0.1.1"
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
