[package]
name = "abc128"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc128-a = { alias = "a", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_a" }
abc128-b = { alias = "b", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_b" }
abc128-c = { alias = "c", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_c" }
abc128-d = { alias = "d", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_d" }
abc128-e = { alias = "e", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_e" }
abc128-f = { alias = "f", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_f" }

[[bin]]
name = "abc128-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc128-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc128-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc128-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc128-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc128-f"
path = "src/bin/f.rs"

[dependencies]
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
