[package]
name = "abc134"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc134-a = { alias = "a", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_a" }
abc134-b = { alias = "b", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_b" }
abc134-c = { alias = "c", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_c" }
abc134-d = { alias = "d", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_d" }
abc134-e = { alias = "e", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_e" }
abc134-f = { alias = "f", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_f" }

[[bin]]
name = "abc134-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc134-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc134-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc134-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc134-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc134-f"
path = "src/bin/f.rs"

[dependencies]
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
