[package]
name = "abc136"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc136-a = { alias = "a", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_a" }
abc136-b = { alias = "b", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_b" }
abc136-c = { alias = "c", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_c" }
abc136-d = { alias = "d", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_d" }
abc136-e = { alias = "e", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_e" }
abc136-f = { alias = "f", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_f" }

[[bin]]
name = "abc136-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc136-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc136-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc136-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc136-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc136-f"
path = "src/bin/f.rs"

[dependencies]
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
