[package]
name = "abc138"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc138-a = { alias = "a", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_a" }
abc138-b = { alias = "b", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_b" }
abc138-c = { alias = "c", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_c" }
abc138-d = { alias = "d", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_d" }
abc138-e = { alias = "e", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_e" }
abc138-f = { alias = "f", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_f" }

[[bin]]
name = "abc138-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc138-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc138-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc138-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc138-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc138-f"
path = "src/bin/f.rs"

[dependencies]
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
