[package]
name = "abc141"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc141-a = { alias = "a", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_a" }
abc141-b = { alias = "b", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_b" }
abc141-c = { alias = "c", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_c" }
abc141-d = { alias = "d", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_d" }
abc141-e = { alias = "e", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_e" }
abc141-f = { alias = "f", problem = "https://atcoder.jp/contests/abc141/tasks/abc141_f" }

[[bin]]
name = "abc141-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc141-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc141-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc141-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc141-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc141-f"
path = "src/bin/f.rs"

[dependencies]
proconio="=0.4.5"
itertools="=0.11.0"

[dev-dependencies]
